aroundme page: fixed issue where filter dropdown was cut off in case of no users found

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9395,7 +9395,7 @@ Around me page styling
 @media (min-width: 990px) {
   #aroundme_overview {
     width: 990px;
-    margin: 0 auto;
+    margin: 0 auto 30px auto;
   }
 
   .gridlist-container {
