--- a/resources/assets/sass/_aroundme.scss
+++ b/resources/assets/sass/_aroundme.scss
@@ -233,7 +233,7 @@ Around me page styling
 @media(min-width: 990px) {
   #aroundme_overview {
     width: 990px;
-    margin: 0 auto;
+    margin: 0 auto 30px auto;
   }
   .gridlist-container {
     width: 990px;
